Adds basic web-page stub.

--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,17 @@
 <html>
 	<head>
-		<title>Kidsbox</title>
+		<title>Kidsbox</title>	
+		<link rel="stylesheet" src="styles.css">
 	</head>
 	<body>
 		<h1>Hi, I'm a File!</h1>
+
+		<section class="rfid">
+			<h3>RFID-ID</h3>
+			<div class="rfid-id"></div>
+			<button class="rfid-refresh">refresh</button>
+		</section>
+
+		<script src="main.js"></script>
 	</body>
 </html>
